--- a/myapp/templates/navbar.html
+++ b/myapp/templates/navbar.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand mb-0 h1" href="{% url 'myapp:index' %}">
+        <a class="navbar-brand mb-0 h1" href="{% url 'myapp:index' %}" style="font-size: 2rem;">
             WeNews
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
