--- a/myapp/templates/footer.html
+++ b/myapp/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-white text-center py-3">
+<footer class="bg-dark text-white text-center py-3 mt-auto">
     <div class="container">
         <p>&copy; 2025 WeNews. All rights reserved.</p>
         <a href="{% url 'myapp:index' %}" class="text-white">トップページに戻る</a>
