--- a/accounts/templates/signup_success.html
+++ b/accounts/templates/signup_success.html
@@ -1,12 +1,13 @@
 {% extends 'index.html' %}
 
-{% block title %}Registration Complete{% endblock %}
+{% block title %}登録完了{% endblock %}
 {% block contents %}
 <div class="container">
     <div class="row">
         <div class="col offset-4 py-4">
-            <h3>ようこそ{{ record.user.username }}さん</h3>
-            <p><a href="#">ログインはこちら</a></p>
+            <h3>アカウント登録が完了しました。</h3>
+            <br>
+                <p><a  href="{% url 'accounts:login' %}">こちらからログインできます</a></p>
         </div>
     </div>
 </div>
