--- a/myapp/templates/datail.html
+++ b/myapp/templates/datail.html
@@ -8,25 +8,29 @@
     <div class="row">
         <div class="col-12"> <!-- col-12で全幅を使用 -->
             <!-- タイトル -->
-            <h2 class="mt-3">{{ object.title }}</h2> <!-- タイトルの下に余白 -->
+            <h2 class="mt-3 mb-4">{{ object.title }}</h2> <!-- タイトルに下余白を追加 -->
 
             <!-- 画像とコメントを横並びにするためのdiv -->
-            <div class="d-flex mt-3"> <!-- 画像とコメントの間に空白を追加 -->
+            <div class="d-flex flex-column flex-md-row mt-3"> <!-- スマホでは縦並び、デスクトップでは横並び -->
                 <!-- 1枚目の写真 -->
-                <p><img src="{{ object.image1.url }}" class="img-fluid" style="max-width: 300px; margin-right: 10px;"></p>
+                <p class="mb-3 mb-md-0"><img src="{{ object.image1.url }}" class="img-fluid" style="max-width: 300px; margin-right: 20px;"></p>
                 
                 <!-- コメント（改行を有効にする） -->
-                <p>{{ object.comment|linebreaksbr }}</p>
+                <div class="flex-grow-1">
+                    <p>{{ object.comment|linebreaksbr }}</p>
+                </div>
             </div>
     
             <!-- 2枚目の写真が投稿されていたら表示する-->
             {% if object.image2 %}
-            <p><img src="{{ object.image2.url }}" class="img-fluid" style="max-width: 300px;"></p>
+                <div class="mt-3">
+                    <p><img src="{{ object.image2.url }}" class="img-fluid" style="max-width: 300px;"></p>
+                </div>
             {% endif %}
             
             <br>
             <!-- 投稿日時 -->
-            <p>{{ object.posted_at }} に投稿</p>
+            <p class="text-muted mt-3">投稿日時: {{ object.posted_at }}</p>
         </div>
     </div>
 </div>
