--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="ja">
 
@@ -7,51 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
     <title>{% block title %}{% endblock %}</title>
+
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .content {
+            flex: 1;
+        }
+
+        footer {
+            background-color: #212529;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+        }
+    </style>
 </head>
 
 <body>
     {% include 'navbar.html' %}
-    {% if request.resolver_match.url_name == 'index' %}
-    {% include 'header.html' %}
-    {% endif %}
     
-    <div class="container mt-4">
+    <div class="content container mt-4">
         <div class="row">
-            <!-- メインコンテンツ -->
             <div class="col-md-9">
                 {% block contents %}
                 {% include 'post_list.html' %}
                 {% endblock %}
             </div>
-
-            <!-- 合体したサイドバー -->
             <div class="col-md-3">
                 <div class="card-body">
                     {% if request.resolver_match.url_name == 'index' %}
-                        <!-- カテゴリー一覧 -->
                         {% include 'category_list.html' %}
-                        <div class="mb-4"></div> <!-- 間隔調整 -->
-
-                        <!-- 天気情報 -->
+                        <div class="mb-4"></div>
                         {% include 'weather.html' %}
                     {% endif %}
                 </div>
             </div>
         </div>
     </div>
-<nav>
 
-    {% include 'footer.html' %}
-    
+    <footer>
+        {% include 'footer.html' %}
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
