--- a/myapp/templates/search_results.html
+++ b/myapp/templates/search_results.html
@@ -1,12 +1,11 @@
 {% extends 'index.html' %}
 
-{% block title %}検索結果{% endblock %}
+{% block title %}search_results{% endblock %}
 
 {% block contents %}
 <div class="container">
     <div class="row">
         <div class="col-12"> <!-- col-12で全幅を使用 -->
-            <h2 class="mt-4 mb-4 text-center">検索結果</h2> <!-- 検索結果のタイトル -->
 
             {% if results %}
                 <div class="list-group">
